--- a/app/components/sliderPage/sliderPage.module.css
+++ b/app/components/sliderPage/sliderPage.module.css
@@ -7,16 +7,17 @@
 }
 .headerText{
     position: absolute;
-    top: 260px;
+    top: 150px;
     left: 200px;
     max-width: 800px;
     text-align: center;
-   
+   background: rgba(0, 0, 0, 0.7);
+   padding: 1rem;
 }
 .headerText h1{
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: 800;
-    color: rgb(103, 101, 101);
+    color: rgb(255, 255, 255);
 }
 
 .image__slider__container .slick-dots{
