--- a/app/components/sliderPage/sliderPage.module.css
+++ b/app/components/sliderPage/sliderPage.module.css
@@ -7,7 +7,7 @@
 }
 .headerText{
     position: absolute;
-    top: 150px;
+    top: 110px;
     left: 200px;
     max-width: 800px;
     text-align: center;
@@ -39,4 +39,27 @@
     .image__slider__container{
         max-width: 100vw;
     }
+    .image__slider__container .slider{
+        height: 300px;
+        margin-top: 6rem;
+    }
+    .headerText{
+        position: absolute;
+        top: 110px;
+        left: 80px;
+        max-width: 230px;
+        text-align: center;
+       background: rgba(0, 0, 0, 0.7);
+       padding: 5px;
+    }
+    .headerText h1{
+        font-size: 13px;
+        font-weight: 800;
+        color: rgb(255, 255, 255);
+    }
+    .image__slider__container .slick-dots{
+        bottom: 0px;
+        background-color: red;
+    }
+    
 }
