--- a/app/components/navbar/navbar.module.css
+++ b/app/components/navbar/navbar.module.css
@@ -36,6 +36,15 @@
      align-items: center;
      gap: 2.5rem;
  }
+ .navBtns a{
+    background: #9dd05a;
+    color: white;
+    font-size: 1rem;
+    height: 3rem;
+    padding: 1rem;
+    border-radius: 1rem;
+
+}
  .navBtns button{
      cursor: pointer;
      font-size: 1.3rem;
