--- a/app/contact/contact.module.css
+++ b/app/contact/contact.module.css
@@ -75,13 +75,14 @@
     background-color: #9dd05a;
     font-weight: 600; 
     color: white; 
+    border: none;
     margin-top: 20px; 
     transition: background-color 0.5s, color 0.5s; 
   }
   
   .submitButton:hover {
     /* background-color: #ff0000; */
-    color: #ffffff;
+    color: #f5f5f5;
   }
 
   @media screen and (max-width: 600px) {
@@ -89,6 +90,9 @@
         display: flex;
         flex-direction: column;
         gap: 2rem;
+    }
+    .contactRight h3{
+        margin-left: 15px;
     }
     
     .form{
