--- a/app/components/catalog/catalog.module.css
+++ b/app/components/catalog/catalog.module.css
@@ -1,3 +1,4 @@
+
 .catalog{
     margin-top: 5rem;
     display: flex;
@@ -13,7 +14,7 @@
 } */
 .bigCatContainer{
     display: grid;
-    grid-template-columns: repeat(5,1fr);
+    grid-template-columns: repeat(4,1fr);
     gap: 10px;
     overflow-x: hidden;
 }
@@ -33,14 +34,17 @@
 }
 
 .catalogCon { 
-    background: #f5f5f5;
+    width: 260px;
+    background-color: white;
     border: #e9e9e9 solid 2px;
     transition: all ease-in 0.3s;
+    border-radius: 10px;
+    padding: 10px;
    
 }
-.catalogCon:hover{
+/* .catalogCon:hover{
     border:#039654 solid 1px;
-}
+} */
 
 .catalogImg {
     width: 100%;
@@ -105,7 +109,7 @@
 }
 .ctaBtn{
     background:  #264501;
-    width: 200px;
+    width: 240px;
     height: 35px;
     display: flex;
     align-items: center;
