--- a/app/components/header/header.module.css
+++ b/app/components/header/header.module.css
@@ -1,43 +1,1 @@
-.header{
-    width: 100%;
-    min-height: 100vh;
-    /* background-image: url('../../assets/gbanner.png'); */
-    background-repeat: no-repeat;
-    background-size: cover;
-    /* margin-top: 7rem; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.headerText{
-    text-align: center;
-    max-width: 800px;
-}
-.headerText h1{
-    font-size: 4rem;
-    font-weight: 600;
-    color: gray;
-}
-.headerText p{
-    max-width: 700px;
-    margin: 10px auto 20px;
-    line-height: 1.4;
-}
-
-.headerCta{
-    display: flex;
-    gap: 1.2rem;
-    align-items: center;
-    justify-content: center;
-}
-
-
-@media screen and (max-width: 600px) {
-   
-    .headerText h1{
-        font-size: 4rem;
-        text-align: center;
-        font-weight: bold;
-    }
-   
-}
+/*  */
