--- a/app/components/projectPage/projectPage.module.css
+++ b/app/components/projectPage/projectPage.module.css
@@ -1,11 +1,19 @@
-.catalog{
+.section{
+    background-color: #f1f3f5;
+    margin-top: 6rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 3rem 0rem;
+}
+/* .catalog{
     margin-top: 5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
     padding: 1.5rem 2rem;
-}
+} */
 .bigContainer{
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -27,28 +35,42 @@
 }
 
 .catalogCon { 
-    background: #f5f5f5;
-    border: #e9e9e9 solid 2px;
+    background: #fff;
+    box-shadow: 
+        0 6px 15px rgba(0, 0, 0, 0.15), inset 0 2px 5px #0000000d;
     transition: all ease-in 0.3s;
-    width: 320px;
+    width: 330px;
+    height: 230px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 15px;
     text-align: center;
+    padding: 1rem 0.5rem;
 }
 
-.catalogCon:hover{
-    border:#383838 solid 1px;
+.catalogImg{
+    width: 180px;
+    height: 120px;
 }
+
+/* .catalogCon:hover{
+    border:#383838 solid 1px;
+} */
 
 .catalogText {
     padding:10px;
-    font-size: 20px;
-    color: #8b8b8b;
+    font-size: 25px;
+    color: #35B729;
+    font-weight: bold;
 }
 
 @media screen and (max-width: 600px) {
    
+   .section{
+    margin-top: -7rem;
+  
+}
     .bigContainer{
         display: flex;
         flex-direction: column;
