--- a/app/components/testimonials/testimonials.module.css
+++ b/app/components/testimonials/testimonials.module.css
@@ -23,9 +23,20 @@
 }
 .name{
     margin: 2rem 0 0.2rem;
+    font-size: 1.3rem;
+    font-weight: 700;
+    color: #3e3e3e;
+}
+.job{
+    font-size: 1rem;
 }
 .quote{
-    margin: 1rem 0;
+    /* margin: 1rem 0; */
+    font-family: inherit;
+  font-weight: normal;
+  text-rendering: optimizeLegibility;
+  font-size: 0.8rem;
+  line-height: 1.2;
 }
 
 @media screen and (max-width: 600px) {
