--- a/app/components/catalog/catalog.module.css
+++ b/app/components/catalog/catalog.module.css
@@ -34,21 +34,23 @@
 }
 
 .catalogCon { 
-    width: 260px;
-    background-color: white;
+    background:  #264501;
+    width: 275px;
+    /* background-color: white; */
     border: #e9e9e9 solid 2px;
     transition: all ease-in 0.3s;
     border-radius: 10px;
     padding: 10px;
    
 }
-/* .catalogCon:hover{
-    border:#039654 solid 1px;
-} */
+.catalogCon:hover{
+    /* border:#039654 solid 1px; */
+    background: #407401;
+}
 
 .catalogImg {
     width: 100%;
-    height: 150px;
+    height: 170px;
     margin: 0 auto;
     padding: 0;
     position: relative;
@@ -62,7 +64,8 @@
 }
 .catalogText a{
     font-size:14px; 
-    color:#5a5a5a; 
+    /* color:#5a5a5a;  */
+    color: white;
     text-transform:uppercase; 
     display:block; 
     width:100%;
