--- a/app/components/footer/footer.module.css
+++ b/app/components/footer/footer.module.css
@@ -1,6 +1,7 @@
 .footer{
     width:100%; 
-    background-color:#01273a; 
+    /* background-color:#01273a;  */
+    background-color: #264501;
     margin:0px; 
     padding: 1.5rem;
     color: white;
@@ -50,13 +51,17 @@
     flex-direction: column;
     gap: 1rem;
 }
+.contactForm input{
+    background: rgba(0, 0, 0, 0.19);
+}
 .contactRight h2{
     color: white;
     font-size: 1.5rem;
 }
 
 .footerCopyright{
-    background-color:  #01202f;
+    /* background-color:  #01202f; */
+    background-color: #407401;
     text-align: center;
     padding: 1rem;
     display: block;
