--- a/app/components/missionPage/mission.module.css
+++ b/app/components/missionPage/mission.module.css
@@ -138,6 +138,7 @@
         font-size: 4rem;
         text-align: center;
         font-weight: bold;
+        margin: 1rem;
     }
     .headerText h2{
         font-size: 1.5rem;
