--- a/app/components/projectPage/projectPage.module.css
+++ b/app/components/projectPage/projectPage.module.css
@@ -1,5 +1,7 @@
 .section{
-    background-color: #f1f3f5;
+    /* background-color: #f1f3f5; */
+    /* background: rgba(0, 0, 0, 0.7); */
+    background-color: #264501;
     margin-top: 6rem;
     display: flex;
     flex-direction: column;
@@ -23,12 +25,14 @@
     text-align:center; 
     font-size:32px; 
     text-transform:uppercase; 
-    font-weight:bold
+    font-weight:bold;
+    color: white;
 }
 .productText{ 
     text-align:center; 
     line-height:20px; 
-    color:#8b8b8b; 
+    /* color:#8b8b8b;  */
+    color: white;
     width:600px; 
     margin:0px auto; 
     padding:10px 0px 10px 0px;
