--- a/app/components/sliderPage/sliderPage.module.css
+++ b/app/components/sliderPage/sliderPage.module.css
@@ -11,7 +11,8 @@
     left: 200px;
     max-width: 800px;
     text-align: center;
-   background: rgba(0, 0, 0, 0.7);
+   /* background: rgba(0, 0, 0, 0.7); */
+   background: #264501;
    padding: 1rem;
 }
 .headerText h1{
