--- a/app/components/testimonials/testimonials.module.css
+++ b/app/components/testimonials/testimonials.module.css
@@ -1,5 +1,6 @@
 .section{
-    background: #f5f5f5;
+    /* background: #f5f5f5; */
+     background: rgba(0, 0, 0, 0.19);
     margin-top: 6rem;
     display: flex;
     flex-direction: column;
