--- a/app/components/projectPage/projectPage.module.css
+++ b/app/components/projectPage/projectPage.module.css
@@ -83,7 +83,7 @@
     .productText{ 
         text-align:center; 
         line-height:20px; 
-        color:#8b8b8b; 
+        color: white; 
         width:300px; 
         
     }
