--- a/app/components/footer/footer.module.css
+++ b/app/components/footer/footer.module.css
@@ -51,9 +51,7 @@
     flex-direction: column;
     gap: 1rem;
 }
-.contactForm input{
-    background: rgba(0, 0, 0, 0.19);
-}
+
 .contactRight h2{
     color: white;
     font-size: 1.5rem;
@@ -65,7 +63,7 @@
     text-align: center;
     padding: 1rem;
     display: block;
-    border-top: 1px solid var(--color-gray-300);
+    /* border-top: 1px solid var(--color-gray-300); */
     margin-top: 2rem;
     width: 100%;
     font-size: 1.2rem;
