--- a/app/components/missionPage/mission.module.css
+++ b/app/components/missionPage/mission.module.css
@@ -134,14 +134,10 @@
    .header{
     margin-top: 1rem;
    }
-    .headerText h1{
-        font-size: 4rem;
-        text-align: center;
-        font-weight: bold;
-        margin: 1rem;
-    }
+  
     .headerText h2{
         font-size: 1.5rem;
+        margin-top: 1rem;
     }
     .headerText p{
         font-size: 17px;
