--- a/app/components/sliderPage/sliderPage.module.css
+++ b/app/components/sliderPage/sliderPage.module.css
@@ -50,7 +50,8 @@
         left: 80px;
         max-width: 230px;
         text-align: center;
-       background: rgba(0, 0, 0, 0.7);
+       /* background: rgba(0, 0, 0, 0.7); */
+       background: #264501;
        padding: 5px;
     }
     .headerText h1{
