--- a/app/contact/contact.module.css
+++ b/app/contact/contact.module.css
@@ -6,12 +6,17 @@
 }
 .contactWrapper{
     display: flex;
+    flex-direction: column;
     margin-inline: auto;
     width: fit-content;
     gap: 2.5rem;
     opacity: 0;
     margin-top: 4rem;
     animation: identifier 1s ease-in forwards;
+}
+.social1{
+    display: flex;
+    gap: 1rem;
 }
 @keyframes identifier{
     to{
@@ -55,6 +60,7 @@
     width: 100%;
     background-color: white;
     font-weight: 600; 
+    border: 1px solid  rgba(0, 0, 0, 0.5);;
     padding: 15px; 
     color: rgba(0, 0, 0, 0.5);
   }
@@ -62,6 +68,7 @@
   .contactRight textarea {
     margin-top: 20px; 
     background-color: white;
+    border: 1px solid  rgba(0, 0, 0, 0.5);;
     color: black;
   }
   
